# sqlite_cli_tool

./: Cargo.toml  iron_farm.db  readme.md
src/: core.rs  main.rs
src/core/: cli.rs  core_shell.rs  mod.rs
src/core/commands/: browse.rs  connect.rs  handle_commands.rs  help_ui.rs  mod.rs  show.rs
src/db_func/: connect_to_db.rs  db_manager.rs  get_data.rs  metadata_func.rs  mod.rs
src/tui/: metadata_ui.rs  show_data.rs
src/ui/: metadata_ui.rs  mod.rs  show_data.rs
