[package]
name = "sqlite_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.12",features = ["derive"] }
crossterm = "0.27.0"
ratatui = "0.25.0"
rusqlite = { version = "0.30.0",features = ["bundled"] }
tui = "0.19.0"
shlex = { version = "1.2.0", features = [] }
